# nonebot-plugin-wtfllm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
nonebot_plugin_wtfllm/: __init__.py  config.py  utils.py
nonebot_plugin_wtfllm/abilities/: __init__.py  core_memory_compressor.py  image_generation.py  poi.py  vision.py
nonebot_plugin_wtfllm/db/: __init__.py  engine.py
nonebot_plugin_wtfllm/llm/: agents.py  deps.py  response_models.py
nonebot_plugin_wtfllm/media/: __init__.py  image.py
nonebot_plugin_wtfllm/memory/: context.py  director.py  providers.py  utils.py
nonebot_plugin_wtfllm/msg_tracker/: tracker.py
nonebot_plugin_wtfllm/scheduler/: __init__.py  engine.py  executor.py  recovery.py  service.py
nonebot_plugin_wtfllm/sdk/: tools.py
nonebot_plugin_wtfllm/services/: __init__.py  agent.py  easy_ban.py  lifecycle.py  store.py  summary.py
nonebot_plugin_wtfllm/stream_processing/: __init__.py  extract.py  hyper_clean.py  store_flow.py
nonebot_plugin_wtfllm/topic/: __init__.py  _types.py  clustering.py  manager.py  vectorizer.py
nonebot_plugin_wtfllm/v_db/: __init__.py  lifecycle.py
src/nonebot_plugin_wtfllm/: __init__.py  config.py
tests/: conftest.py  test_config.py  test_utils.py
tests/abilities/: __init__.py  test_core_memory_compressor.py  test_image_generation.py  test_ocr.py  test_poi.py  test_self_identification.py  test_vision.py
tests/db/: test_models.py  test_repositories.py  test_thought_record_repo.py  test_tool_call_record_repo.py
tests/inertia/: test_algorithm_detection.py  test_curve.py  test_detect.py  test_prefilter.py  test_scan.py  test_types.py
tests/integration/: conftest.py  test_memory_pipeline.py  test_message_rendering.py  test_providers_integration.py  test_topic_pipeline.py
tests/llm/: conftest.py  test_agents.py  test_deps.py  test_history_processor.py  test_response_models.py  test_tool_chat.py  test_tool_core_memory.py  test_tool_files.py  test_tool_image_generation.py  test_tool_knowledge_base.py  test_tool_memes.py  test_tool_schedule_message.py  test_tool_user_persona.py  test_tool_utils.py  test_tool_web_search.py  test_tools.py
tests/media/: test_image.py
tests/memory/: test_director.py  (+3 more)
(+250 files in other folders)
